<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IceScore</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="referee">Referee</string>
    <string name="linesmanA">Linesman</string>
    <string name="linesmanB">Linesman</string>
    <string name="venue">Venue</string>
    <string name="period">20:00</string>
    <string name="title_penaltyview_list">Items</string>
    <string name="title_penaltyview_detail">penaltyview Detail</string>
    <string name="title_activity_select_game">SelectGame</string>

    <!-- Activity Titles -->
    <string name="title_change_goalie">Change Goalie</string>
    <string name="title_game_log">Game Log</string>

    <!-- ActionBarActivity buttons -->
    <!-- Confirm Game Screen -->
    <string name="menu_confirm">Confirm Game</string>

    <!-- Setup Team Screen -->
    <string name="menu_next">Next</string>
    <string name="title_activity_penalty">Penalty</string>

    <!-- Signature capture Junk -->
    <string name="hello">Hello World, CaptureSignatureActivity!</string>
    <string name="getSig">CaptureSignature</string>
    <string name="external_dir">GetSignature</string>
    <string name="action_settings1">Action Settings</string>
    <string name="title_activity_capture_signature">CaptureSignature</string>

</resources>
