<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Team A"
        android:textSize="32dp"
        android:id="@+id/txtTeamA"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="70dp"
        android:layout_marginStart="70dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="Manager Sign"
        android:textSize="24dp"
        android:id="@+id/btnManagerSignA"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/txtTeamA"
        android:layout_toEndOf="@+id/txtTeamA" />

    <ListView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:id="@+id/lstTeamA"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/txtTeamA"
        android:layout_alignStart="@+id/txtTeamA"
        android:layout_alignRight="@+id/btnManagerSignA"
        android:layout_alignEnd="@+id/btnManagerSignA"
        android:layout_below="@+id/btnManagerSignA"
        android:entries="@array/teamA" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Team B"
        android:textSize="32dp"
        android:id="@+id/txtTeamB"
        android:layout_below="@+id/lstTeamA"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="70dp"
        android:layout_marginStart="70dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="Manager Sign"
        android:textSize="24dp"
        android:id="@+id/btnManagerSignB"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/lstTeamA"
        android:layout_toRightOf="@+id/txtTeamB"
        android:layout_toEndOf="@+id/txtTeamB" />

    <ListView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:id="@+id/lstTeamB"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/txtTeamB"
        android:layout_alignStart="@+id/txtTeamB"
        android:layout_alignRight="@+id/btnManagerSignB"
        android:layout_alignEnd="@+id/btnManagerSignB"
        android:layout_below="@+id/btnManagerSignB"
        android:entries="@array/teamB" />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:id="@+id/spnReferee"
        android:prompt="@string/referee"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/txtTeamA"
        android:layout_alignLeft="@+id/spnLinesmanA"
        android:layout_alignStart="@+id/spnLinesmanA"
        android:entries="@array/teamA" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Referee"
        android:textSize="32dp"
        android:id="@+id/txtReferee"
        android:layout_below="@+id/btnManagerSignA"
        android:layout_alignLeft="@+id/txtPeriodLength"
        android:layout_alignStart="@+id/txtPeriodLength" />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:id="@+id/spnLinesmanA"
        android:prompt="@string/linesmanA"
        android:spinnerMode="dropdown"
        android:layout_marginRight="144dp"
        android:layout_marginEnd="144dp"
        android:layout_above="@+id/spnLinesmanB"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:entries="@array/teamA" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Linesman"
        android:textSize="32dp"
        android:id="@+id/txtLinesmanA"
        android:layout_alignTop="@+id/spnLinesmanA"
        android:layout_alignLeft="@+id/txtReferee"
        android:layout_alignStart="@+id/txtReferee" />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:id="@+id/spnLinesmanB"
        android:prompt="@string/linesmanB"
        android:spinnerMode="dropdown"
        android:layout_alignBottom="@+id/lstTeamA"
        android:layout_alignLeft="@+id/spnLinesmanA"
        android:layout_alignStart="@+id/spnLinesmanA" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Linesman"
        android:textSize="32dp"
        android:id="@+id/txtLinesmanB"
        android:layout_alignTop="@+id/spnLinesmanB"
        android:layout_alignLeft="@+id/txtLinesmanA"
        android:layout_alignStart="@+id/txtLinesmanA" />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:id="@+id/spnVenue"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/spnLinesmanB"
        android:layout_alignLeft="@+id/spnLinesmanB"
        android:layout_alignStart="@+id/spnLinesmanB"
        android:entries="@string/venue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Location"
        android:textSize="32dp"
        android:id="@+id/txtVenue"
        android:layout_alignTop="@+id/txtTeamB"
        android:layout_alignLeft="@+id/txtLinesmanB"
        android:layout_alignStart="@+id/txtLinesmanB" />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:id="@+id/spnPeriodLength"
        android:prompt="@string/period"
        android:spinnerMode="dropdown"
        android:focusable="false"
        android:entries="@array/Periods"
        android:layout_alignTop="@+id/lstTeamB"
        android:layout_alignLeft="@+id/spnVenue"
        android:layout_alignStart="@+id/spnVenue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Period Length"
        android:textSize="32dp"
        android:id="@+id/txtPeriodLength"
        android:layout_alignTop="@+id/spnPeriodLength"
        android:layout_toLeftOf="@+id/spnPeriodLength"
        android:layout_toStartOf="@+id/spnPeriodLength" />

</RelativeLayout>